# kscrypto

./: CMakeLists.txt  README.md  main.cpp
src/include/crypto/hash/: blake2.h  hash.h  sha2.h
src/lib/crypto/hash/: HashResult.cpp  blake2.cpp  sha2.cpp
src/lib/crypto/hash/blake/: blake2b.c  blake2s.c
